# botrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-docs.yml  rust.yml
docs/: changelog.md  contributing.md
docs/.vitepress/: config.mts
docs/examples/: file-uploads.md  getting-started.md
docs/zh/: changelog.md  contributing.md
docs/zh/examples/: file-uploads.md  getting-started.md
docs/zh/guide/: configuration.md  security.md
examples/: IMPLEMENTATION_SUMMARY.md  demo_announce.rs  demo_api_permission.rs  demo_at_reply.rs  demo_at_reply_ark.rs  demo_at_reply_command.rs  demo_at_reply_embed.rs  demo_at_reply_file_data.rs  demo_at_reply_keyboard.rs  demo_at_reply_markdown.rs  demo_at_reply_reference.rs  demo_audio_or_live_channel_member.rs  demo_c2c_manage_event.rs  demo_c2c_reply_file.rs  demo_c2c_reply_text.rs  demo_dms_reply.rs  demo_get_reaction_users.rs  demo_group_manage_event.rs  demo_group_reply_file.rs  demo_group_reply_text.rs  demo_guild_member_event.rs  demo_new_message_api.rs  demo_open_forum_event.rs  demo_pins_message.rs  demo_recall.rs  demo_schedule.rs  simple_bot.rs
examples/common/: config.rs  mod.rs
src/: api.rs  audio.rs  client.rs  connection.rs  error.rs  gateway.rs  http.rs  lib.rs  manage.rs  token.rs
src/models/: api.rs  gateway.rs  guild.rs  message.rs  mod.rs  robot.rs  user.rs
